@@ -31,7 +31,7 @@ Dist::Zilla::Plugin::Test::ChangesHasContent = 0
 Dist::Zilla::Plugin::Test::MinimumVersion = 2.000003
 Dist::Zilla::Plugin::PodSyntaxTests = 0
 Dist::Zilla::Plugin::PodCoverageTests = 0
-Dist::Zilla::Plugin::Test::PodSpelling = 2.006001
+Dist::Zilla::Plugin::Test::PodSpelling = 2.006003
 ;Dist::Zilla::Plugin::Test::Pod::LinkCheck = 0
 Dist::Zilla::Plugin::Test::Pod::No404s = 1.002
 Dist::Zilla::Plugin::Test::Kwalitee = 2.10
